<resources>
    <string name="app_name">PruebaIIPuebliando409</string>
    <string name="titulohoteles">
        ¡Andate por las calles pues!
    </string>
    <string name="resenahoteles">
        Si vas de paso por la Fundadora de pueblos, enterate que los hospedajes campestres son de las opciones que mas destacan. Puedes alquilar por horas, amanecidas y por semanas desde mucho menos que lo te cuesta un plan en
        hotel de lugares lejanos. No hay reparo con la vista, pues la panoramica del municipio resulta de encanto...
    </string>
    <string name="botonhotel">HOTELES</string>
    <string name="titulorestaurantes">Como que esta dando filo, ¿no?
    </string>
    <string name="resenarestaurantes">
            En Copa la comida antioquena no queda en bajo. Arrima donde Aide para probar un rico mondongo completo, o pasate en carro por el paradero
        de Santa Rosa y te armas el buffet mas paisa que Avemaria.
    </string>
    <string name="botonrestaurante">RESTAURANTES</string>
    <string name="titulositios">¿Pa donde va a coger hoy?</string>
    <string name="resenasitios">
        Este es un municipio que mezcla de manera armonica su riqueza natural, en el parque de Piedras Blancas que comparte con Guarne, y su valor historico,
    </string>
    <string name="botonsitios">SITIOS TURISTICOS</string>

    <string name="Opcion1">Español</string>
    <string name="Opcion2">Inglés</string>
    <string name="Opcion3">Portugués</string>
    <string name="Opcion4">Acerca de</string>

    <string name="formulariouser">Usuario</string>
    <string name="formulariokeyword">Contraseña</string>

    <string name="botonlogin">Ingresar</string>

    <string name="bienvenidoc">Buenas de nuevo,</string>

    <string name="reseniaperfil">Joven estudiante de desarrollo de software, con buen manejo del inglés, motivado y proactivo. He estado involucrado en procesos productivos; con ello he sabido manejar ambientes exigentes y desarrollado cierto liderazgo al trabajar en equipo. Interesado en causas sociales y en búsqueda de seguir estudiando química para la industria.</string>
    <string name="contacto">Contacto</string>

    <string name="nombresitio">Nombre</string>
    <string name="encargadositio">Persona encargada</string>
    <string name="telsitio">Contacto</string>
    <string name="desdesitio">Desde</string>

    <string name="nombreHA">Hotel</string>
    <string name="precioHA">Desde</string>
    <string name="contactoHA">Contacto:</string>

    <string name="valorMolde">Valoración:</string>

    <string name="precioRA">Prueba desde</string>
    <string name="contactoRA">Contacto:</string>


</resources>