<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondohottels"
    tools:context=".HotelesHome">


  <TextView
      android:id="@+id/titulohotel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/titulohoteles"
      android:textColor="@color/white"
      android:fontFamily="sans-serif-condensed-medium"
      android:textSize="35dp"
      android:textStyle="bold"


      app:layout_constraintBottom_toTopOf="@id/descriphotel"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.517" />

  <TextView
      android:id="@+id/descriphotel"
      android:layout_width="329dp"
      android:layout_height="346dp"
      android:text="@string/resenahoteles"
      android:textColor="@color/white"
      android:textSize="17dp"

      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.311" />

  <ImageView
      android:id="@+id/logohotel"
      android:layout_width="98dp"
      android:layout_height="112dp"
      android:src="@drawable/hotel"

      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.571" />

  <Button
      android:id="@+id/botonvermas"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="20dp"
      android:layout_marginBottom="168dp"
      android:background="@drawable/borderhoteles"
      android:text="@string/botonhotel"
      android:textColor="@color/white"
      android:textSize="25dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/logohotel"
      app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>